[package]
name = "ladder-league"
version = "0.1.0"
authors = ["Christopher S. Corley <cscorley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
chrono = { version = "0.4.10", features = ["serde"]}
diesel = { version = "1.4.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.15.0"
fern = "0.5"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
uuid = { version= "0.8.1", features = ["serde"]}
futures = "0.3.1"
